--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.699.0",
     "argon2": "^0.41.1",
+    "aws-sdk": "^2.1692.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,6 +21,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.23.8"
@@ -28,6 +31,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.16",
     "typescript": "^5.6.2"
   },
